# kubernetes_exemple-

./: Cargo.toml  README.md
src/: main.rs
